Bug 137660 - Missing focus indicator for flat buttons (like in the start center) in KDE
Summary: Missing focus indicator for flat buttons (like in the start center) in KDE
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Jan-Marek Glogowski
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords:
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2020-10-21 15:17 UTC by Jan-Marek Glogowski
Modified: 2020-10-22 19:55 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan-Marek Glogowski 2020-10-21 15:17:15 UTC
There is no visible keyboard focus indicator with either gtk3 breeze theme or kf5 breeze theme. Gtk adwaita somehow manages to draw a thin dotted line. Problem in general is, that since #i110915#, flat buttons don't send a focus update. This is no problem, if you rely on LO to draw a dotted focus rect, like for gen, or support ControlType::Pushbutton + ControlPart::Focus native, which both doesn't fit the bill for kf5.

Proposed solution is to send a focus update in this case. Gtk+ uses the separate ControlPart::Focus notification.
Comment 1 Commit Notification 2020-10-22 10:22:19 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3f7515258e91266f10e5c7bafee2d3d6fa9c91c2

tdf#137660 send some focus event for push buttons

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2020-10-22 19:55:35 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/c425987e15519a9187fd482502f908b54c8416cb

tdf#137660 send some focus event for push buttons

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.